<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".SendotpActivity">




    <LinearLayout

       android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:src="@drawable/sendotp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="80dp"
            android:layout_width="200dp"
            android:layout_height="200dp">
        </ImageView>


        <TextView
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>


        <TextView
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:ems="10"
            android:singleLine="true"
            android:text="@string/we_wil_send_you_one_time_password_on_this_mobile_number"
            android:gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>



        <TextView
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:ems="10"
            android:singleLine="true"
            android:text="@string/enter_mobile_number"
            android:gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>



        <LinearLayout

           android:gravity="center"
          android:layout_marginEnd="60dp"
           android:layout_marginStart="60dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView

                android:gravity="center"
                android:text="+880"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />



            <EditText

                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:imeOptions="actionDone"
                android:hint="@string/_1756474170"
                android:id="@+id/inputMobie"
                android:layout_width="wrap_content"
                android:layout_height="50dp">

            </EditText>


        </LinearLayout>



        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#158744"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp">

        </View>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/buttonGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/get_otp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </Button>


            <ProgressBar
                android:layout_marginTop="5dp"

                android:id="@+id/progressBar1"
                android:layout_width="91dp"

                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:visibility="gone">

            </ProgressBar>


        </FrameLayout>


    </LinearLayout>

</ScrollView>